--- a/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
@@ -1,12 +1,16 @@
-import 'package:<%= baseName %>/account/register/register_bloc.dart';
+import 'package:flutter_bloc/flutter_bloc.dart';
+import 'package:<%= baseName %>/account/register/bloc/register_bloc.dart';
 <%_ if (enableTranslation) { _%>
-import 'package:<%= baseName %>/generated/l10n.dart';
+    import 'package:<%= baseName %>/generated/l10n.dart';
 <%_ } _%>
 import 'package:<%= baseName %>/keys.dart';
 import 'package:<%= baseName %>/routes.dart';
-import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
 import 'package:flutter/material.dart';
 import 'package:flutter/widgets.dart';
+import 'package:formz/formz.dart';
+import 'package:<%= baseName %>/shared/repository/http_utils.dart';
+
+import 'bloc/register_models.dart';
 
 
 class RegisterScreen extends StatelessWidget {
@@ -14,7 +18,6 @@ class RegisterScreen extends StatelessWidget {
 
   @override
   Widget build(BuildContext context) {
-    final registerBloc = BlocProvider.of<RegisterBloc>(context);
     return Scaffold(
         appBar: AppBar(
           title: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterTitle <%_ } else { _%> 'Register' <%_ } _%>),
@@ -23,8 +26,8 @@ class RegisterScreen extends StatelessWidget {
           padding: const EdgeInsets.all(15.0),
           child: Column(children: <Widget>[
             header(context),
-            successZone(registerBloc),
-            registerForm(registerBloc)
+            successZone(),
+            registerForm()
           ]),
         ));
   }
@@ -43,85 +46,86 @@ class RegisterScreen extends StatelessWidget {
     );
   }
 
-  Widget registerForm(RegisterBloc registerBloc) {
-    return StreamBuilder<bool>(
-        stream: registerBloc.successRegisterStream,
-        builder: (context, snapshot) {
+  Widget registerForm() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.status != current.status,
+        builder: (context, state) {
           return Visibility(
-            visible: !snapshot.hasData || !snapshot.data,
+            visible: !state.status.isSubmissionSuccess,
             child: Form(
               child: Wrap(runSpacing: 15, children: <Widget>[
-                loginField(registerBloc),
-                emailField(registerBloc),
-                passwordField(registerBloc),
-                confirmPasswordField(registerBloc),
-                termsAndConditionsField(registerBloc),
-                validationZone(registerBloc),
-                submit(registerBloc)
+                loginField(),
+                emailField(),
+                passwordField(),
+                confirmPasswordField(),
+                termsAndConditionsField(),
+                validationZone(),
+                submit()
               ]),
             ),
           );
         });
   }
 
-  Widget loginField(RegisterBloc registerBloc) {
-    return StreamBuilder<String>(
-        stream: registerBloc.loginStream,
-        builder: (context, snapshot) {
+  Widget loginField() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.login != current.login,
+        builder: (context, state) {
           return TextFormField(
-              onChanged: registerBloc.changeLogin,
+              initialValue: state.login.value,
+              onChanged: (value) { context.bloc<RegisterBloc>().add(LoginChanged(login: value)); },
               keyboardType: TextInputType.text,
               decoration: InputDecoration(
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>,
-                  errorText: snapshot.error));
+                  errorText: state.login.invalid ? LoginValidationError.invalid.invalidMessage : null));
         });
   }
 
-  Widget emailField(RegisterBloc registerBloc) {
-    return StreamBuilder<String>(
-        stream: registerBloc.emailStream,
-        builder: (context, snapshot) {
+  Widget emailField() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.email != current.email,
+        builder: (context, state) {
           return TextFormField(
-            onChanged: registerBloc.changeEmail,
+            onChanged: (value) { context.bloc<RegisterBloc>().add(EmailChanged(email: value)); },
             keyboardType: TextInputType.emailAddress,
             decoration: InputDecoration(
                 labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormEmail <%_ } else { _%> 'Email' <%_ } _%>,
                 hintText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormEmailHint <%_ } else { _%> 'you@example.com' <%_ } _%>,
-                errorText: snapshot.error),
+                errorText: state.email.invalid ? EmailValidationError.invalid.invalidMessage : null),
           );
         });
   }
 
-  Widget passwordField(RegisterBloc registerBloc) {
-    return StreamBuilder<String>(
-        stream: registerBloc.passwordStream,
-        builder: (context, snapshot) {
+  Widget passwordField() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.password != current.password,
+        builder: (context, state) {
           return TextFormField(
-              onChanged: registerBloc.changePassword,
+              onChanged: (value) { context.bloc<RegisterBloc>().add(PasswordChanged(password: value)); },
               obscureText: true,
               decoration: InputDecoration(
-                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
-                  errorText: snapshot.error));
+                  labelText:<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
+                  errorText: state.password.invalid ? PasswordValidationError.invalid.invalidMessage : null));
         });
   }
 
-  Widget confirmPasswordField(RegisterBloc registerBloc) {
-    return StreamBuilder<String>(
-        stream: registerBloc.confirmPasswordStream,
-        builder: (context, snapshot) {
+  Widget confirmPasswordField() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.confirmPassword != current.confirmPassword,
+        builder: (context, state) {
           return TextFormField(
-              onChanged: registerBloc.changeConfirmPassword,
+              onChanged: (value) { context.bloc<RegisterBloc>().add(ConfirmPasswordChanged(confirmPassword: value, password: state.password.value)); },
               obscureText: true,
               decoration: InputDecoration(
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormConfirmPassword <%_ } else { _%> 'Confirm password' <%_ } _%>,
-                  errorText: snapshot.error));
+                  errorText: state.confirmPassword.invalid ? ConfirmPasswordValidationError.invalid.invalidMessage : null));
         });
   }
 
-  Widget termsAndConditionsField(RegisterBloc registerBloc) {
-    return StreamBuilder<bool>(
-        stream: registerBloc.termsAndConditionsStream,
-        builder: (context, snapshot) {
+  Widget termsAndConditionsField() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.termsAndConditions != current.termsAndConditions,
+        builder: (context, state) {
           return Column(
             children: <Widget>[
               Row(
@@ -132,8 +136,8 @@ class RegisterScreen extends StatelessWidget {
                     height: 24,
                     width: 24,
                     child: Checkbox(
-                        onChanged: registerBloc.changeTermsAndConditions,
-                        value: snapshot.hasData ? snapshot.data : false),
+                        onChanged: (value) { context.bloc<RegisterBloc>().add(TermsAndConditionsChanged(termsAndConditions: value)); },
+                        value: state.termsAndConditions.value),
                   ),
                   Padding(
                     padding: EdgeInsets.only(right: 5),
@@ -142,7 +146,7 @@ class RegisterScreen extends StatelessWidget {
                 ],
               ),
               Visibility(
-                visible: snapshot.hasError,
+                visible: state.termsAndConditions.status != FormzInputStatus.pure && state.termsAndConditions.invalid,
                 child: Padding(
                   padding: const EdgeInsets.only(top: 10.0),
                   child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormTermsConditionsNotChecked <%_ } else { _%> 'Please accept the terms and conditions' <%_ } _%>,
@@ -155,65 +159,65 @@ class RegisterScreen extends StatelessWidget {
         });
   }
 
-  Widget validationZone(RegisterBloc registerBloc) {
-    return StreamBuilder<bool>(
-        stream: registerBloc.generalValidationStream,
-        builder: (context, snapshot) {
+  Widget validationZone() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.status != current.status
+            || previous.generalErrorKey != current.generalErrorKey,
+        builder: (context, state) {
           return Visibility(
-              visible: snapshot.hasError,
+              visible: state.status.isSubmissionFailure || state.status.isInvalid && state.generalErrorKey != HttpUtils.generalNoErrorKey,
               child: Center(
                 child: Text(
-                  generateError(snapshot, context),
+                  generateError(state, context),
+                  textAlign: TextAlign.center,
                   style: TextStyle(color: Theme.of(context).errorColor),
                 ),
               ));
         });
   }
 
-  String generateError(AsyncSnapshot<bool> snapshot, BuildContext context) {
+  String generateError(RegisterState state, BuildContext context) {
     String errorTranslated = '';
-    if(snapshot.error.toString().compareTo(RegisterBloc.passwordNotIdenticalKey) == 0){
+    if(state.generalErrorKey.toString().compareTo(RegisterBloc.passwordNotIdenticalKey) == 0){
       errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorPasswordNotIdentical <%_ } else { _%> 'The passwords are not identical' <%_ } _%>;
-    } else if(snapshot.error.toString().compareTo(RegisterBloc.emailExistKey) == 0) {
+    } else if(state.generalErrorKey.toString().compareTo(RegisterBloc.emailExistKey) == 0) {
       errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorMailExist <%_ } else { _%> 'Email already exist' <%_ } _%>;
-    } else if (snapshot.error.toString().compareTo(RegisterBloc.loginExistKey) == 0){
+    } else if (state.generalErrorKey.toString().compareTo(RegisterBloc.loginExistKey) == 0){
       errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageRegisterErrorLoginExist <%_ } else { _%> 'Login already taken' <%_ } _%>;
+    } else if (state.generalErrorKey.toString().compareTo(HttpUtils.errorServerKey) == 0) {
+      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).genericErrorServer <%_ } else { _%> 'Something wrong when calling the server, please try again' <%_ } _%>;
     }
 
     return errorTranslated;
   }
 
-  Widget submit(RegisterBloc registerBloc) {
-    return StreamBuilder(
-        stream: registerBloc.submitValid,
-        builder: (context, snapshotSubmit) {
+  Widget submit() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.status != current.status,
+        builder: (context, state) {
           return RaisedButton(
             child: Container(
                 width: MediaQuery.of(context).size.width,
                 height: 50,
-                child: StreamBuilder<bool>(
-                    stream: registerBloc.isLoadingStream,
-                    builder: (context, snapshotLoading) {
-                      return Center(
-                        child: Visibility(
-                          replacement: CircularProgressIndicator(value: null),
-                          visible: snapshotLoading.hasData && !snapshotLoading.data,
-                          child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormSubmit.toUpperCase() <%_ } else { _%> 'Sign up' <%_ } _%>,
-                          ),
-                        ),
-                      );
-                    })),
-            onPressed: snapshotSubmit.hasData ? registerBloc.submit : null,
+                child:  Center(
+                  child: Visibility(
+                    replacement: CircularProgressIndicator(value: null),
+                    visible: !state.status.isSubmissionInProgress,
+                    child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormSubmit.toUpperCase() <%_ } else { _%> 'Sign up' <%_ } _%>,
+                    ),
+                  ),
+                )),
+            onPressed: state.status.isValidated ? () => context.bloc<RegisterBloc>().add(FormSubmitted()) : null,
           );
         });
   }
 
-  Widget successZone(RegisterBloc registerBloc) {
-    return StreamBuilder<bool>(
-        stream: registerBloc.successRegisterStream,
-        builder: (context, snapshot) {
+  Widget successZone() {
+    return BlocBuilder<RegisterBloc, RegisterState>(
+        buildWhen: (previous, current) => previous.status != current.status,
+        builder: (context, state) {
           return Visibility(
-            visible: snapshot.hasData && snapshot.data,
+            visible: state.status.isSubmissionSuccess,
             child: Center(
               child: Column(
                 mainAxisAlignment: MainAxisAlignment.center,
