--- a/generators/app/templates/flutter/flutter-app/lib/account/settings/settings_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/settings/settings_screen.dart.ejs
@@ -1,167 +1,185 @@
 import 'package:flutter/cupertino.dart';
-import 'package:<%= baseName %>/account/settings/settings_bloc.dart';
+import 'package:flutter_bloc/flutter_bloc.dart';
+import 'package:<%= baseName %>/account/login/login_repository.dart';
+import 'package:<%= baseName %>/account/settings/bloc/settings_bloc.dart';
 <%_ if (enableTranslation) { _%>
 import 'package:<%= baseName %>/generated/l10n.dart';
-import 'package:<%= baseName %>/routes.dart';
+import 'package:<%= baseName %>/environment.dart';
 <%_ } _%>
 import 'package:<%= baseName %>/keys.dart';
 import 'package:flutter/material.dart';
 import 'package:flutter/widgets.dart';
-import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
 import 'package:<%= baseName %>/shared/repository/http_utils.dart';
-import 'package:<%= baseName %>/shared/widgets/drawer/drawer_bloc.dart';
+import 'package:formz/formz.dart';
+import 'package:<%= baseName %>/shared/widgets/drawer/bloc/drawer_bloc.dart';
 import 'package:<%= baseName %>/shared/widgets/drawer/drawer_widget.dart';
+
+import 'bloc/settings_models.dart';
 
 class SettingsScreen extends StatelessWidget {
   SettingsScreen() : super(key: <%= camelizedUpperFirstBaseName %>Keys.settingsScreen);
 
   @override
   Widget build(BuildContext context) {
-    final settingsBloc = BlocProvider.of<SettingsBloc>(context);
-    settingsBloc.getIdentity();
     return Scaffold(
         appBar: AppBar(
           centerTitle: true,
-          title: Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsTitle <%_ } else { _%> 'Settings' <%_ } _%>),
+          title: BlocBuilder<SettingsBloc, SettingsState>(
+              buildWhen: (previous, current) => previous.firstname != current.firstname
+                  || current.action == SettingsAction.reloadForLanguage,
+              builder: (context, state) {
+                return Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsTitle <%_ } else { _%> 'Settings' <%_ } _%>);
+              })
         ),
         body: SingleChildScrollView(
           padding: const EdgeInsets.all(15.0),
-          child: Column(children: <Widget>[settingsForm(settingsBloc, context)]),
+          child: Column(children: <Widget>[settingsForm(context)]),
         ),
-        drawer: BlocProvider<<%= camelizedUpperFirstBaseName %>DrawerBloc>(bloc: <%= camelizedUpperFirstBaseName %>DrawerBloc() ,child: <%= camelizedUpperFirstBaseName %>Drawer()));
+        drawer: BlocProvider<DrawerBloc>(
+            create: (context) => DrawerBloc(loginRepository: LoginRepository()),
+            child: <%= camelizedUpperFirstBaseName %>Drawer())
+    );
   }
 
-  Widget settingsForm(SettingsBloc settingsBloc, BuildContext context) {
+  Widget settingsForm(BuildContext context) {
           return Form(
             child: Wrap(runSpacing: 15, children: <Widget>[
-              formField<String>(settingsBloc.firstNameStream, settingsBloc.changeFirstname,
-                  TextInputType.text, <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormFirstname <%_ } else { _%> 'Firstname' <%_ } _%>, settingsBloc.firstNameController),
-              formField<String>(settingsBloc.lastNameStream, settingsBloc.changeLastname,
-                  TextInputType.text, <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormLastname <%_ } else { _%> 'Lastname' <%_ } _%>, settingsBloc.lastNameController),
-              formField<String>(settingsBloc.emailStream, settingsBloc.changeEmail,
-                  TextInputType.emailAddress, <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormEmail <%_ } else { _%> 'Email' <%_ } _%>, settingsBloc.emailController),
-              <%_ if (enableTranslation) { _%>
-              languageField(settingsBloc),
-              <%_ } _%>
-              notificationZone(settingsBloc),
-              submit(context, settingsBloc)
+              firstnameField(),
+              lastnameNameField(),
+              emailField(),
+            <%_ if (enableTranslation) { _%>
+            languageField(),
+            <%_ } _%>
+              notificationZone(),
+              submit(context)
             ]),
           );
   }
 
-  Widget formField<T>(Stream<T> stream, Function(String) onChange, TextInputType type,
-      String labelText, TextEditingController controller) {
-    return StreamBuilder<T>(
-        stream: stream,
-        builder: (context, AsyncSnapshot<T> snapshot) {
-            return TextFormField(
-                controller:  controller,
-                onChanged: onChange,
-                keyboardType: type,
-                decoration: InputDecoration(
-                    labelText: labelText,
-                    errorText: snapshot.error));
+  Widget firstnameField() {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.firstname != current.firstname
+            || current.action == SettingsAction.reloadForLanguage,
+        builder: (context, state) {
+          return TextFormField(
+              controller: context.bloc<SettingsBloc>().firstNameController,
+              onChanged: (value) { context.bloc<SettingsBloc>().add(FirstnameChanged(firstname: value)); },
+              keyboardType: TextInputType.text,
+              decoration: InputDecoration(
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormFirstname <%_ } else { _%> 'Firstname' <%_ } _%>,
+                  errorText: state.firstname.invalid ? FirstnameValidationError.invalid.invalidMessage : null));
         }
     );
   }
-  <%_ if (enableTranslation) { _%>
-  Widget languageField(SettingsBloc settingsBloc) {
-    return StreamBuilder<Map<String, String>>(
-        stream: settingsBloc.languagesStream,
-        builder: (context, snapshotLanguages) {
-          return StreamBuilder<String>(
-            stream: settingsBloc.languageChooseStream,
-            builder: (context, snapshot) {
-              return Padding(
-                padding: const EdgeInsets.only(left: 3.0),
-                child: Row(
-                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
-                  children: <Widget>[
-                    Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormLanguages <%_ } else { _%> 'Languages' <%_ } _%>, style: Theme.of(context).textTheme.bodyText1,),
-                    DropdownButton<String>(
-                        value: snapshot.data,
-                        onChanged: (key) => settingsBloc.changeLanguage(key),
-                        items: snapshotLanguages.hasData ? createDropdownLanguageItems(snapshotLanguages.data) : []),
-                  ],
-                ),
-              );
-            }
-          );
 
-        });
+  Widget lastnameNameField() {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.lastname != current.lastname
+            || current.action == SettingsAction.reloadForLanguage,
+        builder: (context, state) {
+          return TextFormField(
+              controller: context.bloc<SettingsBloc>().lastNameController,
+              onChanged: (value) { context.bloc<SettingsBloc>().add(LastnameChanged(lastname: value)); },
+              keyboardType: TextInputType.text,
+              decoration: InputDecoration(
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormLastname <%_ } else { _%> 'Lastname' <%_ } _%>,
+                  errorText: state.lastname.invalid ? LastnameValidationError.invalid.invalidMessage : null));
+        }
+    );
   }
 
+  Widget emailField() {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.email != current.email
+            || current.action == SettingsAction.reloadForLanguage,
+        builder: (context, state) {
+          return TextFormField(
+              controller: context.bloc<SettingsBloc>().emailController,
+              onChanged: (value) { context.bloc<SettingsBloc>().add(EmailChanged(email: value)); },
+              keyboardType: TextInputType.text,
+              decoration: InputDecoration(
+                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormEmail <%_ } else { _%> 'Email' <%_ } _%>,
+                  errorText: state.email.invalid ? EmailValidationError.invalid.invalidMessage : null));
+        }
+    );
+  }
+<%_ if (enableTranslation) { _%>
+  Widget languageField() {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.language != current.language,
+        builder: (context, state) {
+           return Padding(
+            padding: const EdgeInsets.only(left: 3.0),
+            child: Row(
+              mainAxisAlignment: MainAxisAlignment.spaceBetween,
+              children: <Widget>[
+                Text(S.of(context).pageSettingsFormLanguages, style: Theme.of(context).textTheme.bodyText1,),
+                DropdownButton<String>(
+                    value: state.language,
+                    onChanged: (value) { context.bloc<SettingsBloc>().add(LanguageChanged(language: value)); },
+                    items: createDropdownLanguageItems(Constants.languages)),
+              ],
+            ),
+          );
+        });
+  }
 
   List<DropdownMenuItem<String>> createDropdownLanguageItems(Map<String, String> languages) {
     return languages.keys.map<DropdownMenuItem<String>>((String key) =>
             DropdownMenuItem<String>(value: key, child: Text(languages[key])))
         .toList();
   }
- <%_ } _%>
+<%_ } _%>
 
-  submit(BuildContext context, SettingsBloc settingsBloc){
-    return StreamBuilder<bool>(
-      stream: settingsBloc.submitValid,
-      builder: (context, snapshotSubmit) {
+  submit(BuildContext context) {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.formStatus != current.formStatus,
+        builder: (context, state) {
         return RaisedButton(
           child: Container(
               width: MediaQuery.of(context).size.width,
-              child: StreamBuilder<bool>(
-                  stream: settingsBloc.isLoadingStream,
-                  builder: (context, snapshotLoading) {
-                    return Center(
-                      child: Visibility(
-                        replacement: CircularProgressIndicator(value: null),
-                        visible: snapshotLoading.hasData && !snapshotLoading.data,
-                        child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormSave.toUpperCase() <%_ } else { _%> 'SAVE' <%_ } _%>,
-                        ),
-                      ),
-                    );
-                  })),
-          onPressed: snapshotSubmit.hasData ? <%_ if (enableTranslation) { _%> () => saveSettings(snapshotSubmit, settingsBloc, context) <%_ } else { _%> settingsBloc.submit <%_ } _%>  : null,
+              child: Center(
+                child: Visibility(
+                  replacement: CircularProgressIndicator(value: null),
+                  visible: !state.formStatus.isSubmissionInProgress,
+                  child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormSave.toUpperCase() <%_ } else { _%> 'SAVE' <%_ } _%>),
+                ),
+              )),
+          onPressed: state.formStatus.isValidated ? () => context.bloc<SettingsBloc>().add(FormSubmitted()) : null,
         );
       }
     );
   }
 
-  <%_ if (enableTranslation) { _%>
-  saveSettings(AsyncSnapshot<bool> snapshotSubmit, SettingsBloc settingsBloc, BuildContext context) async {
-    var reloadForLanguage = await settingsBloc.submit();
-    if(reloadForLanguage) {
-      Navigator.popAndPushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.main);
-    }
-  }
-  <%_ } _%>
-
-  Widget notificationZone(SettingsBloc settingsBloc) {
-    return StreamBuilder<String>(
-        stream: settingsBloc.notificationSaveSettings,
-        builder: (context, snapshot) {
+  Widget notificationZone() {
+    return BlocBuilder<SettingsBloc, SettingsState>(
+        buildWhen: (previous, current) => previous.formStatus != current.formStatus,
+        builder: (context, state) {
           return Visibility(
-              visible: snapshot.hasData || snapshot.hasError,
+              visible: state.formStatus.isSubmissionFailure ||  state.formStatus.isSubmissionSuccess,
               child: Center(
-                child: generateNotificationText(snapshot, context),
+                child: generateNotificationText(state, context),
               ));
         });
   }
 
-    Widget generateNotificationText(AsyncSnapshot<String> snapshot, BuildContext context) {
-        String notificationTranslated = '';
-        MaterialColor notificationColors;
-        if(snapshot.hasData && snapshot.data.compareTo(SettingsBloc.successKey) == 0) {
-           notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessSave <%_ } else { _%> 'Settings saved !' <%_ } _%>;
-           notificationColors =  Theme.of(context).primaryColor;
-        } else if(snapshot.error.toString().compareTo(SettingsBloc.badrequestKey) == 0) {
-           notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessErrorBadRequest <%_ } else { _%> 'Something wrong happended with the data' <%_ } _%>;
-           notificationColors = Theme.of(context).errorColor;
-        } else if (snapshot.error.toString().compareTo(HttpUtils.errorServerKey) == 0) {
-           notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessErrorServer <%_ } else { _%> 'Something wrong when calling the server, please try again' <%_ } _%>;
-           notificationColors = Theme.of(context).errorColor;
-        }
+  Widget generateNotificationText(SettingsState state, BuildContext context) {
+    String notificationTranslated = '';
+    MaterialColor notificationColors;
+    if(state.generalNotificationKey.compareTo(SettingsBloc.successKey) == 0) {
+      notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSave <%_ } else { _%> 'Settings saved !' <%_ } _%>;
+      notificationColors = Theme.of(context).primaryColor;
+    } else if(state.generalNotificationKey.compareTo(HttpUtils.errorServerKey) == 0) {
+      notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).genericErrorBadRequest <%_ } else { _%> 'Something wrong happended with the data' <%_ } _%>;
+      notificationColors = Theme.of(context).errorColor;
+    } else if (state.generalNotificationKey.compareTo(HttpUtils.errorServerKey) == 0) {
+      notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).genericErrorServer <%_ } else { _%> 'Something wrong when calling the server, please try again' <%_ } _%>;
+      notificationColors = Theme.of(context).errorColor;
+    }
 
-        return Text(
-           notificationTranslated,
-           style: TextStyle(color: notificationColors),
-        );
-   }
+    return Text(
+      notificationTranslated,
+      style: TextStyle(color: notificationColors),
+    );
+  }
 }
