--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -1,7 +1,7 @@
 {
   "locale": "fr" ,
   "pageLoginBar": "Se connecter",
-  "pageLoginTitle": "Bienvenue sur votre app",
+  "pageLoginTitle": "Bienvenue sur Jhipster flutter app",
   "pageLoginLoginButton": "S'identifier",
   "pageLoginRegisterButton": "Créer un compte",
   "pageLoginErrorAuthentication": "Un problème est survenu, veuillez vérifier vos identifiants",
@@ -20,6 +20,10 @@
   "pageRegisterSuccessAltImg": "Votre compte a été créé avec succés",
   "pageRegisterSuccess": "Félicitation",
   "pageRegisterSuccessSub": "Votre compte a été créé avec succés",
+  "pageRegisterLoginValidationError": "Le login doit contenir au moins {min} caractères",
+  "pageRegisterMailValidationError": "L'email n'est pas valide",
+  "pageRegisterPasswordValidationError": "Régles : 1 majuscule, 1 chiffre, {min} caractères",
+  "pageRegisterConfirmationPasswordValidationError": "Régles : 1 majuscule, 1 chiffre, {min} caractères",
   "pageMainTitle": "Page principale",
   "pageMainCurrentUser": "Utilisateur connecté : {login}",
   "pageMainWelcome": "Bienvenue sur votre Jhipster flutter app",
@@ -33,7 +37,10 @@
   "pageSettingsFormEmail": "Email",
   "pageSettingsFormLanguage": "Langues",
   "pageSettingsFormSave": "Enregistrer",
-  "pageSettingsSuccessSave": "Paramètres sauvegardés !",
-  "pageSettingsSuccessErrorBadRequest": "Mauvais format de données",
-  "pageSettingsSuccessErrorServer": "Problème de communication avec le serveur, merci de réessayer"
+  "pageSettingsSave": "Paramètres sauvegardés !",
+  "pageSettingsFirstnameErrorValidation": "Prénom doit avoir au moins {min} caractères",
+  "pageSettingsLastnameErrorValidation": "Le nom doit avoir au moins {min} caractères",
+  "pageSettingsEmailErrorValidation": "Format d'email incorrect",
+  "genericErrorBadRequest": "Mauvais format de données",
+  "genericErrorServer": "Problème de communication avec le serveur, merci de réessayer"
 }
