--- a/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main.dart.ejs
@@ -1,4 +1,4 @@
-import 'package:<%= baseName %>/environement.dart';
+import 'package:<%= baseName %>/environment.dart';
 import 'package:flutter/material.dart';
 import 'app.dart';
 import 'main.reflectable.dart';
