--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -14,7 +14,7 @@ description: <%= baseName %> flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.7.0 < 3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,11 @@ dependencies:
   rxdart: 0.24.1
   flutter_secure_storage: 3.3.3
   url_launcher: 5.4.11
+
+  #BLoC pattern related
+  formz: 0.2.0
+  equatable: 1.2.2
+  flutter_bloc: 5.0.1
 
 dev_dependencies:
   flutter_test:
