--- a/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
@@ -1,36 +1,46 @@
+import 'package:flutter_bloc/flutter_bloc.dart';
+import 'package:<%= baseName %>/account/login/bloc/login_bloc.dart';
 <%_ if (enableTranslation) { _%>
 import 'package:<%= baseName %>/generated/l10n.dart';
 <%_ } _%>
 import 'package:<%= baseName %>/keys.dart';
-import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
 import 'package:flutter/cupertino.dart';
 import 'package:flutter/material.dart';
+import 'package:<%= baseName %>/routes.dart';
+import 'package:<%= baseName %>/shared/repository/http_utils.dart';
+import 'package:formz/formz.dart';
 
-import '../../routes.dart';
-import 'login_bloc.dart';
+import 'bloc/login_models.dart';
+
 
 class LoginScreen extends StatelessWidget {
   LoginScreen({Key key}) : super(key: <%= camelizedUpperFirstBaseName %>Keys.mainScreen);
 
   @override
   Widget build(BuildContext context) {
-    final loginBloc = BlocProvider.of<LoginBloc>(context);
-    return Scaffold(
-        appBar: AppBar(
-          automaticallyImplyLeading: false,
-          title: <%_ if (enableTranslation) { _%> Text(S.of(context).pageLoginTitle) <%_ } else { _%> Text('Welcome to <%= baseName %>') <%_ } _%>,
-        ),
-        body: SingleChildScrollView(
-          padding: const EdgeInsets.all(15.0),
-          child: Column(children: <Widget>[
-            header(context),
-            loginForm(loginBloc),
-            Padding(
-              padding: EdgeInsets.only(bottom: 50),
-            ),
-            register(context)
-          ]),
-        ));
+    return BlocListener<LoginBloc, LoginState>(
+      listener: (context, state) {
+        if(state.status.isSubmissionSuccess){
+          Navigator.pushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.main);
+        }
+      },
+      child: Scaffold(
+          appBar: AppBar(
+            automaticallyImplyLeading: false,
+            title: <%_ if (enableTranslation) { _%> Text(S.of(context).pageLoginTitle) <%_ } else { _%> Text('Welcome to <%= baseName %>') <%_ } _%>,
+          ),
+          body: SingleChildScrollView(
+            padding: const EdgeInsets.all(15.0),
+            child: Column(children: <Widget>[
+              header(context),
+              loginForm(),
+              Padding(
+                padding: EdgeInsets.only(bottom: 50),
+              ),
+              register(context)
+            ]),
+          )),
+    );
   }
 
   Widget header(BuildContext context) {
@@ -44,41 +54,43 @@ class LoginScreen extends StatelessWidget {
     );
   }
 
-  Widget loginField(LoginBloc loginBloc) {
-    return StreamBuilder<String>(
-        stream: loginBloc.usernameStream,
-        builder: (context, snapshot) {
+  Widget loginField() {
+    return BlocBuilder<LoginBloc, LoginState>(
+        buildWhen: (previous, current) => previous.login != current.login,
+        builder: (context, state) {
           return TextFormField(
-              onChanged: loginBloc.changeLogin,
+              initialValue: state.login.value,
+              onChanged: (value) { context.bloc<LoginBloc>().add(LoginChanged(login: value)); },
               keyboardType: TextInputType.text,
               decoration: InputDecoration(
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>,
-                  errorText: snapshot.error));
+                  errorText: state.login.invalid ? LoginValidationError.invalid.invalidMessage : null));
         });
   }
 
-  Widget passwordField(LoginBloc loginBloc) {
-    return StreamBuilder<String>(
-        stream: loginBloc.passwordStream,
-        builder: (context, snapshot) {
+  Widget passwordField() {
+    return BlocBuilder<LoginBloc, LoginState>(
+        buildWhen:(previous, current) => previous.password != current.password,
+        builder: (context, state) {
           return TextFormField(
-              onChanged: loginBloc.changePassword,
+              initialValue: state.password.value,
+              onChanged: (value) { context.bloc<LoginBloc>().add(PasswordChanged(password: value)); },
               obscureText: true,
               decoration: InputDecoration(
-                  labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
-                  errorText: snapshot.error));
+                  labelText:<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
+                  errorText: state.password.invalid ? PasswordValidationError.invalid.invalidMessage : null));
         });
   }
 
-  Widget loginForm(LoginBloc loginBloc) {
+  Widget loginForm() {
     return Form(
-      child: Wrap(runSpacing: 15, children: <Widget>[
-        loginField(loginBloc),
-        passwordField(loginBloc),
-        validationZone(loginBloc),
-        submit(loginBloc)
-      ]),
-    );
+          child: Wrap(runSpacing: 15, children: <Widget>[
+            loginField(),
+            passwordField(),
+            validationZone(),
+            submit()
+          ]),
+        );
   }
 
   Widget register(BuildContext context) {
@@ -88,66 +100,57 @@ class LoginScreen extends StatelessWidget {
           width: MediaQuery.of(context).size.width,
           height: 50,
           child: Center(
-            child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterTitle.toUpperCase() <%_ } else { _%> 'Register'.toUpperCase() <%_ } _%>,
+            child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterTitle.toUpperCase() <%_ } else { _%> 'Register'.toUpperCase() <%_ } _%>
             ),
           )),
       onPressed: () => Navigator.pushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.register),
     );
   }
 
-  Widget validationZone(LoginBloc loginBloc) {
-    return StreamBuilder<bool>(
-        stream: loginBloc.generalValidationStream,
-        builder: (context, snapshot) {
+  Widget validationZone() {
+    return BlocBuilder<LoginBloc, LoginState>(
+        buildWhen:(previous, current) => previous.status != current.status,
+        builder: (context, state) {
           return Visibility(
-              visible: snapshot.hasError,
+              visible: state.status.isSubmissionFailure,
               child: Center(
                 child: Text(
-                  generateError(snapshot, context),
+                  generateError(state, context),
                   style: TextStyle(fontSize: Theme.of(context).textTheme.bodyText1.fontSize, color: Theme.of(context).errorColor),
+                  textAlign: TextAlign.center,
                 ),
               ));
         });
   }
 
-  Widget submit(LoginBloc loginBloc) {
-    return StreamBuilder(
-        stream: loginBloc.submitValid,
-        builder: (context, snapshotSubmit) {
+  Widget submit() {
+    return BlocBuilder<LoginBloc, LoginState>(
+        buildWhen: (previous, current) => previous.status != current.status,
+        builder: (context, state) {
           return RaisedButton(
             child: Container(
                 width: MediaQuery.of(context).size.width,
                 height: 50,
-                child: StreamBuilder<bool>(
-                    stream: loginBloc.isLoadingStream,
-                    builder: (context, snapshotLoading) {
-                      return Center(
+                child: Center(
                         child: Visibility(
                           replacement: CircularProgressIndicator(value: null),
-                          visible: snapshotLoading.hasData && !snapshotLoading.data,
-                          child: Text(<%_ if (enableTranslation) { _%>S.of(context).pageLoginLoginButton.toUpperCase()<%_ } else { _%>'Sign in'.toUpperCase()<%_ } _%>,
-                          ),
+                          visible: !state.status.isSubmissionInProgress,
+                    child: Text(<%_ if (enableTranslation) { _%>S.of(context).pageLoginLoginButton.toUpperCase()<%_ } else { _%>'Sign in'.toUpperCase()<%_ } _%>),
                         ),
-                      );
-                    })),
-            onPressed: snapshotSubmit.hasData
-                ? () => onAuthenticate(loginBloc, context)
-                : null,
+                      )
+                    ),
+            onPressed: state.status.isValidated
+                ? () => context.bloc<LoginBloc>().add(FormSubmitted()) : null,
           );
         });
   }
 
-  onAuthenticate(LoginBloc loginBloc, BuildContext context) async {
-    bool authenticateSuccess = await loginBloc.authenticate();
-    if (authenticateSuccess) {
-      Navigator.pushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.main);
-    }
-  }
-
-  String generateError(AsyncSnapshot<bool> snapshot, BuildContext context) {
+  String generateError(LoginState state, BuildContext context) {
     String errorTranslated = '';
-    if (snapshot.error.toString().compareTo(LoginBloc.authenticationFailKey) == 0) {
-      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageLoginErrorAuthentication <%_ } else { _%> 'Problem when authenticate, verify your credential' <%_ } _%>;
+    if (state.generalErrorKey.toString().compareTo(LoginState.authenticationFailKey) == 0) {
+                        errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageLoginErrorAuthentication <%_ } else { _%> 'Problem when authenticate, verify your credential' <%_ } _%>;
+    } else if (state.generalErrorKey.toString().compareTo(HttpUtils.errorServerKey) == 0) {
+      errorTranslated = <%_ if (enableTranslation) { _%> S.of(context).genericErrorServer <%_ } else { _%> 'Something wrong when calling the server, please try again' <%_ } _%>;
     }
     return errorTranslated;
   }
