--- a/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
@@ -1,22 +1,23 @@
-import 'package:<%= baseName %>/routes.dart';
-import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
-import 'package:<%= baseName %>/main/main_bloc.dart';
-import 'package:<%= baseName %>/main/main_screen.dart';
-import 'package:<%= baseName %>/account/settings/settings_bloc.dart';
+import 'package:flutter_bloc/flutter_bloc.dart';
+import 'package:<%= baseName %>/account/login/bloc/login_bloc.dart';
+import 'package:<%= baseName %>/account/login/login_repository.dart';
+import 'package:<%= baseName %>/account/register/bloc/register_bloc.dart';
 import 'package:<%= baseName %>/account/settings/settings_screen.dart';
-import 'package:<%= baseName %>/themes.dart';
-import 'package:flutter/cupertino.dart';
+import 'package:<%= baseName %>/main/bloc/main_bloc.dart';
+import 'package:<%= baseName %>/routes.dart';
+import 'package:<%= baseName %>/main/main_screen.dart';
 import 'package:flutter/material.dart';
+import 'package:<%= baseName %>/shared/repository/account_repository.dart';
+import 'package:<%= baseName %>/themes.dart';
+import 'account/settings/bloc/settings_bloc.dart';
+
+import 'account/login/login_screen.dart';
+import 'account/register/register_screen.dart';
 
 <%_ if (enableTranslation) { _%>
 import 'package:flutter_localizations/flutter_localizations.dart';
 import 'generated/l10n.dart';
 <%_ } _%>
-
-import 'account/login/login_bloc.dart';
-import 'account/login/login_screen.dart';
-import 'account/register/register_bloc.dart';
-import 'account/register/register_screen.dart';
 
 class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
   const <%= camelizedUpperFirstBaseName %>App({Key key}) : super(key: key);
@@ -24,23 +25,30 @@ class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
   @override
   Widget build(BuildContext context) {
     return MaterialApp(
-      title: 'Jhipster flutter app',
+      title: '<%= camelizedUpperFirstBaseName %> app',
       theme: Themes.jhLight,
       routes: {
         <%= camelizedUpperFirstBaseName %>Routes.login: (context) {
-          return BlocProvider<LoginBloc>(bloc: LoginBloc(), child: LoginScreen());
+          return BlocProvider<LoginBloc>(
+            create: (context) => LoginBloc(loginRepository: LoginRepository()),
+            child: LoginScreen());
         },
         <%= camelizedUpperFirstBaseName %>Routes.register: (context) {
           return BlocProvider<RegisterBloc>(
-              bloc: RegisterBloc(), child: RegisterScreen());
+            create: (context) => RegisterBloc(accountRepository: AccountRepository()),
+            child: RegisterScreen());
         },
         <%= camelizedUpperFirstBaseName %>Routes.main: (context) {
           return BlocProvider<MainBloc>(
-              bloc: MainBloc(), child: MainScreen());
+            create: (context) => MainBloc(accountRepository: AccountRepository())
+              ..add(Init()),
+            child: MainScreen());
         },
       <%= camelizedUpperFirstBaseName %>Routes.settings: (context) {
-      return BlocProvider<SettingsBloc>(
-        bloc: SettingsBloc(), child: SettingsScreen());
+        return BlocProvider<SettingsBloc>(
+          create: (context) => SettingsBloc(accountRepository: AccountRepository())
+            ..add(LoadCurrentUser()),
+          child: SettingsScreen());
         },
       },
       <%_ if (enableTranslation) { _%>
@@ -54,6 +62,4 @@ class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
       <%_ } _%>
     );
   }
-
-
 }
