--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -1,7 +1,7 @@
 {
   "locale": "en" ,
   "pageLoginBar": "Login",
-  "pageLoginTitle": "Welcome to your app",
+  "pageLoginTitle": "Welcome to Jhipster flutter app",
   "pageLoginLoginButton": "Sign in",
   "pageLoginRegisterButton": "Register",
   "pageLoginErrorAuthentication": "Problem when authenticate, verify your credential",
@@ -20,6 +20,10 @@
   "pageRegisterSuccessAltImg": "Register success",
   "pageRegisterSuccess": "Congratulation",
   "pageRegisterSuccessSub": "You have successfuly registered",
+  "pageRegisterLoginValidationError": "The login has to contain more than {min}",
+  "pageRegisterMailValidationError": "Please enter a valid address email",
+  "pageRegisterPasswordValidationError": "Rules : 1 uppercase, 1 number and {min} characters",
+  "pageRegisterConfirmationPasswordValidationError": "Rules : 1 uppercase, 1 number and {min} characters",
   "pageMainProfileButton": "Your profile",
   "pageMainEventButton": "Event",
   "pageMainOpenPackButton": "Open pack",
@@ -38,7 +42,10 @@
   "pageSettingsFormEmail": "Email",
   "pageSettingsFormLanguages": "Languages",
   "pageSettingsFormSave": "Save",
-  "pageSettingsSuccessSave": "Settings saved !",
-  "pageSettingsSuccessErrorBadRequest": "Something wrong happended with the data",
-  "pageSettingsSuccessErrorServer": "Something wrong when calling the server, please try again"
+  "pageSettingsSave": "Settings saved !",
+  "pageSettingsFirstnameErrorValidation": "Firstname has to be {min} characters minimum",
+  "pageSettingsLastnameErrorValidation": "Lastname has to be {min} characters minimum",
+  "pageSettingsEmailErrorValidation": "Email format incorrect",
+  "genericErrorBadRequest": "Something wrong happened with the received data",
+  "genericErrorServer": "Something wrong when calling the server, please try again"
 }
